# agent-based-models-hpc

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker-run.sh  imgui.ini
.claude/: settings.local.json
.claude/agents/: code-documenter.md  cpp-code-writer.md  static-analyzer-fixer.md
.githooks/: pre-push
.github/workflows/: ci.yml
example/: CMakeLists.txt  main.cpp
example/game-of-life/: CMakeLists.txt
example/game-of-life/common/: CMakeLists.txt
example/game-of-life/common/src/: GameOfLifeSpace.cpp
example/game-of-life/cpu/: CMakeLists.txt
example/game-of-life/cpu-ui/: CMakeLists.txt
example/game-of-life/cpu-ui/src/: Cell.h  GameOfLifeModel.cpp  GameOfLifeModel.h  GameOfLifeSimulation.cpp  GameOfLifeSpace.cpp  GameOfLifeSpace.h  Renderer.cpp  Renderer.h  main.cpp
example/game-of-life/cpu/common/: CMakeLists.txt
example/game-of-life/cpu/common/src/: Cell.cpp  GameOfLifeModel.cpp  GameOfLifeSpace.cpp  GameOfLifeSpace.h
example/game-of-life/cpu/time-measurement/: CMakeLists.txt  README.md
example/game-of-life/cpu/time-measurement/src/: GameOfLifeSimulation.cpp  GameOfLifeSimulation.h  main.cpp
example/game-of-life/cpu/ui/: CMakeLists.txt  README.md
example/game-of-life/cpu/ui/src/: GameOfLifeSimulation.cpp  GameOfLifeSimulation.h  Renderer.cpp  main.cpp
example/game-of-life/gpu/: CMakeLists.txt
example/game-of-life/gpu/time-measurement/: CMakeLists.txt  README.md
example/game-of-life/gpu/time-measurement/src/: GameOfLifeModel.cu  GameOfLifeModel.h  GameOfLifeSimulation.cpp  GameOfLifeSimulation.cu  GameOfLifeSimulation.h  main.cpp  main.cu
example/game-of-life/utils/: compare_checkpoints.py
lib/: CMakeLists.txt
lib/include/ParallelABM/: Agent.h  Environment.h  EnvironmentSlurm.h  LocalEnvironment.h  LocalEnvironmentCPU.h  LocalRegion.h  LocalRegion.inl  Logger.h  MPICoordinator.h  MPICoordinator.inl  MPINode.h  MPIWorker.h  MPIWorker.inl  Model.h  ModelCPU.h  ModelCUDA.h  ParallelABM.h  Simulation.h  SimulationCPU.h  SimulationCPU.inl  SimulationCUDA.h  Space.h  calculator.h
lib/include/mylib/: calculator.h
lib/src/: EnvironmentSlurm.cpp  LocalEnvironmentCPU.cpp  LocalRegion.cpp  Logger.cpp  MPICoordinator.cpp  MPINode.cpp  MPIWorker.cpp  SimulationCPU.cpp  SimulationCUDA.cu  calculator.cpp
tests/: CMakeLists.txt  test_calculator.cpp
tests/game-of-life/: CMakeLists.txt
tests/game-of-life/common/: CMakeLists.txt
tests/game-of-life/common/src/: TestAgent.cpp  TestAgent.h  TestModel.cpp  TestModel.h  TestSimulation.cpp  TestSimulation.h  TestSpace.cpp  TestSpace.h
tests/game-of-life/test1/: CMakeLists.txt
tests/game-of-life/test1/src/: main.cpp
tests/game-of-life/test2/: CMakeLists.txt
tests/game-of-life/test2/src/: main.cpp
tests/game-of-life/test3/: CMakeLists.txt
tests/game-of-life/test3/src/: main.cpp
tests/game-of-life/test4/: CMakeLists.txt
tests/game-of-life/test4/src/: main.cpp
tests/game-of-life/test5/: CMakeLists.txt
tests/game-of-life/test5/src/: main.cpp
utils/: compare_checkpoints.py
